--- a/src/Adstacy/AppBundle/Resources/views/App/tag_list.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/tag_list.html.twig
@@ -1,13 +1,13 @@
-<li><a href="{{ path('adstacy_app_search', {q: 'kuliner'}) }}" title="Kuliner">Kuliner <small>#kuliner</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'fashion'}) }}" title="Fashion">Fashion <small>#fashion</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'event'}) }}" title="Event">Event <small>#event</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'game'}) }}" title="Game">Game <small>#game</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'lowongan'}) }}" title="Lowongan">Lowongan <small>#lowongan</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'carijodoh'}) }}" title="Cari Jodoh">Cari Jodoh <small>#carijodoh</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'movie'}) }}" title="Movie">Movie <small>#movie</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'buku'}) }}" title="Buku">Buku <small>#buku</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'diskon'}) }}" title="Diskon">Diskon <small>#diskon</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'gadget'}) }}" title="Gadget">Gadget <small>#gadget</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'medan'}) }}" title="Medan">Medan <small>#medan</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'jakarta'}) }}" title="Jakarta">Jakarta <small>#jakarta</small></a></li>
-<li><a href="{{ path('adstacy_app_search', {q: 'indonesia'}) }}" title="Indonesia">Indonesia <small>#indonesia</small></a></li>
+<li><a href="{{ path('adstacy_app_search', {q: 'kuliner'}) }}" title="Kuliner">Kuliner</a></li>
+<li><a href="{{ path('adstacy_app_search', {q: 'fashion'}) }}" title="Fashion">Fashion</a></li>
+<li><a href="{{ path('adstacy_app_search', {q: 'event'}) }}" title="Event">Event</a></li>
+<li><a href="{{ path('adstacy_app_search', {q: 'game'}) }}" title="Game">Game</a></li>
+<li><a href="{{ path('adstacy_app_search', {q: 'lowongan'}) }}" title="Lowongan">Lowongan</a></li>
+<li><a href="{{ path('adstacy_app_search', {q: 'carijodoh'}) }}" title="Cari Jodoh">Cari Jodoh</a></li>
+<li><a href="{{ path('adstacy_app_search', {q: 'movie'}) }}" title="Movie">Movie</a></li>
+<li><a href="{{ path('adstacy_app_search', {q: 'buku'}) }}" title="Buku">Buku</a></li>
+<li><a href="{{ path('adstacy_app_search', {q: 'diskon'}) }}" title="Diskon">Diskon</a></li>
+<li><a href="{{ path('adstacy_app_search', {q: 'gadget'}) }}" title="Gadget">Gadget</a></li>
+<li><a href="{{ path('adstacy_app_search', {q: 'medan'}) }}" title="Medan">Medan</a></li>
+<li><a href="{{ path('adstacy_app_search', {q: 'jakarta'}) }}" title="Jakarta">Jakarta</a></li>
+<li><a href="{{ path('adstacy_app_search', {q: 'indonesia'}) }}" title="Indonesia">Indonesia</a></li>
