--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -37,47 +37,50 @@
   <div class="advert-action btn-group btn-group-justified">
     {% if app.user %}
       {% set promoted = app.user.hasPromote(ad) %}
-      <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="icon icon-bullhorn btn btn-default btn-promote promote {% if promoted %}hide{% endif %}" title="Broadcast"><span>BROADCAST</span></a>
-      <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="icon icon-bullhorn btn btn-primary btn-promote unpromote {% if not promoted %}hide{% endif %}" title="Unbroadcast"><span>UNBROADCAST</span></a>
+      <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default btn-promote promote {% if promoted %}hide{% endif %}" title="Broadcast">
+        <i class="icon icon-bullhorn"></i><span>BROADCAST</span>
+      </a>
+      <a href="{{ path('adstacy_app_ad_unpromote', {id: ad.id}) }}" class="btn btn-primary btn-promote unpromote {% if not promoted %}hide{% endif %}" title="Unbroadcast">
+        <i class="icon icon-bullhorn"></i><span>UNBROADCAST</span>
+      </a>
     {% else %}
-      <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="icon icon-bullhorn btn btn-default btn-promote" title="Broadcast"><span>BROADCAST</span></a>
+      <a href="{{ path('adstacy_app_ad_promote', {id: ad.id}) }}" class="btn btn-default btn-promote" title="Broadcast">
+        <i class="icon icon-bullhorn"></i><span>BROADCAST</span>
+      </a>
     {% endif %}
 
-    <a href="#" class="btn btn-default"><span>COMMENT</span></a>
-    <a href="#" class="icon icon-share btn btn-default"><span>SHARE</span></a>
-  </div>
-
-<!--
-  <div class="btn-group">
-    <a class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-      <i class="icon-share"></i>
+    <a href="#Comment" class="btn btn-default btn-comment">
+      <i class="icon icon-envelope-alt"></i>
+      <span>COMMENT</span>
     </a>
-    <ul class="advert-social-list dropdown-menu pull-right">
-      <li>
-        {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
-        {% set tags = ad.tags|join(',') %}
-        {% set desc = remove_hashtag(ad.description) %} {# remove hashtags because # character is fragment in url #}
-        {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
-        {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
-        <a href="{{ facebookUrl }}" class="facebook-share">
-          <i class="icon-facebook"></i> Share
-        </a>
-      </li>
-      <li>
-        <a href="{{ twitterUrl }}" class="tweet">
-          <i class="icon-twitter twitter-share"></i> Tweet
-        </a>
-      </li>
-    </ul>
+    <a href="#Share" class="btn btn-default btn-share">
+      <i class="icon icon-share"></i>
+      <span>SHARE</span>
+    </a>
   </div>
 
-  {% if app.user %}
-  <div class="advert-comment">
-    <form action="{{ path('adstacy_app_ad_comment', {id: ad.id}) }}" method="post">
-      <textarea name="comment[content]" required="required" class="comment-box" placeholder="{{"form_comment.placeholders.content"|trans}}"></textarea>
-      <input type="submit" value="{{"comment"|trans}}" class="hide">
-    </form>
+  <div class="advert-action-content">
+    {% if app.user %}
+      <div class="advert-comment">
+        <form action="{{ path('adstacy_app_ad_comment', {id: ad.id}) }}" method="post">
+          <textarea name="comment[content]" required="required" class="comment-box" placeholder="{{"form_comment.placeholders.content"|trans}}"></textarea>
+          <input type="submit" value="{{"comment"|trans}}" class="hide">
+        </form>
+      </div>
+    {% endif %}
+
+    {% set adUrl = url('adstacy_app_ad_show', {id: ad.id}) %}
+    {% set tags = ad.tags|join(',') %}
+    {% set desc = remove_hashtag(ad.description) %} {# remove hashtags because # character is fragment in url #}
+    {% set twitterUrl = "https://twitter.com/share?url=#{adUrl}&text=#{desc}&hashtags=#{tags}" %}
+    {% set facebookUrl = "https://www.facebook.com/sharer/sharer.php?u=#{adUrl}" %}
+    <div class="advert-share btn-group btn-group-justified">
+      <a href="{{ facebookUrl }}" class="btn btn-facebook facebook-share">
+        <i class="icon-facebook"></i> Share
+      </a>
+      <a href="{{ twitterUrl }}" class="btn btn-twitter tweet">
+        <i class="icon-twitter twitter-share"></i> Tweet
+      </a>
+    </div>
   </div>
-  {% endif %}
--->
 </div>
