--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -3,6 +3,10 @@ body {
   background: @body-bg url("../img/noise.png");
 }
 
+a {
+  cursor: pointer;
+}
+
 /** Class components **/
 .follow-container {
   padding: 0 10px 10px;
@@ -32,7 +36,9 @@ body {
 }
 
 .follow-action .btn-success:hover,
-.promote-action .btn-success:hover {
+.promote-action .btn-success:hover,
+.advert-action .btn-success:hover,
+.user-action .btn-success:hover {
   background-color: #333;
   border-color: #333;
 }
