--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -44,10 +44,6 @@ body {
     font-size: 14px;
   }
 
-  .icon:before {
-    float: right;
-  }
-
   ul {
     margin: 0;
     padding: 0;
@@ -131,14 +127,8 @@ body {
   display: inline;
 }
 
-.site-header .icon {
-  &:before {
-    float: none;
-  }
-
-  span {
-    display: none;
-  }
+.site-header a span {
+  display: none;
 }
 
 .nav > li {
@@ -172,14 +162,8 @@ body {
     display: none;
   }
 
-  .site-header .icon {
-    &:before {
-      float: right;
-    }
-
-    span {
-      display: inline;
-    }
+  .site-header a span {
+    display: inline;
   }
 
   .site-content {
