--- a/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
@@ -7,14 +7,12 @@
       {{ block('ajax_content') }}
     </div>
   {% else %}
-    <div>
-      {{ block('profile') }}
-    </div>
+    {{ block('profile') }}
     <div class="jumbotron text-center">
       {% if app.user and app.user == user %}
         <h1>{{ "ads.no_ads.self_message"|trans }}</h1>
         <p class="lead">{{ "ads.no_ads.help"|trans }}</p>
-        <a href="{{ path('adstacy_app_ad_create') }}" class="btn btn-success btn-lg">{{ "ads.create"|trans }}<i class="icon icon-plus"></i></a>
+        <a href="{{ path('adstacy_app_ad_create') }}" class="btn btn-success btn-lg" title="{{ "ads.create"|trans }}">{{ "ads.create"|trans }}<i class="icon icon-plus"></i></a>
       {% else %}
         <h1>{{ "ads.no_ads.message"|trans({'%username%': user.username}) }}</h1>
       {% endif %}
@@ -33,54 +31,45 @@
 {% endblock %}
 
 {% block profile %}
-  <div id="user-profile" class="masonry-item">
-    <div class="panel panel-default">
-      <div class="clearfix">
-        <div class="profile-picture">
-          <img src="{{ profile_pic(user) }}" width="130" height="130">
-        </div>
-        <div class="user-profile-desc">
-          <div id="user-profile-info">
-            <h1 class="realname">
-              <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">
-                {{ user.realname }}
-              </a>
-              <small>@{{ user.username }}</small>
-            </h1>
-            {% if user.about %}
-              <h2 class="about">{{ parse_url(parse_hashtag(user.about)) }}</h2>
-            {% else %}
-              <h2 class="about">
-                <span class="empty">
-                  No Description About User.
-                  {% if app.user and app.user == user %}
-                    Go to <a href="{{ path('fos_user_profile_edit') }}">Settings</a> to write.
-                  {% endif %}
-                </span>
-              </h2>
-            {% endif %}
-          </div>
-        </div>
+  <div id="user-profile" class="item panel panel-default">
+    <div class="media">
+      <div class="pull-left">
+        <img src="{{ profile_pic(user) }}" class="media-object" width="120" height="120">
       </div>
-      <div id="user-profile-menu" class="clearfix">
-        <div class="pull-left">
-          <a class="score" href="{{ path('adstacy_app_user_ads', {username: user.username}) }}">Ads<b>{{ adsCount }}</b></a>
-          <a class="score" href="{{ path('adstacy_app_user_promotes', {username: user.username}) }}">Promotes<b>{{ promotesCount }}</b></a>
-          <a class="score" href="{{ path('adstacy_app_user_followers', {username: user.username}) }}">Followers<b><span class="user-followers-count">{{ followersCount }}</span></b></a>
-          <a class="score" href="{{ path('adstacy_app_user_followings', {username: user.username}) }}">Followings<b>{{ followingsCount }}</b></a>
-        </div>
-        <div class="pull-right">
-          {% if app.user %}
-            {% if app.user != user %}
-              {% set followed = app.user.hasFollowUser(user) %}
-              <a class="btn btn-primary btn-follow btn-sm follow-user {% if followed %}hide{% endif %}" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a>
-              <a class="btn btn-success btn-follow btn-sm unfollow-user {% if not followed %}hide{% endif %}" href="{{ path('adstacy_app_user_unfollow', {username: user.username}) }}">Following</a>
-            {% endif %}
+      <div class="media-body">
+        <h4 class="media-heading">
+          <a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">{{ user.realname }}</a>
+          <small>@{{ user.username }}</small>
+        </h4>
+        <div>
+          {% if user.about %}
+            {{ parse_url(parse_hashtag(user.about)) }}
           {% else %}
-            <a class="btn btn-primary btn-follow btn-sm" href="{{ path('adstacy_app_user_follow', {username: user.username}) }}">Follow</a>
+            <i>
+              No Description About User.
+              {% if app.user and app.user == user %}
+                Go to <a href="{{ path('fos_user_profile_edit') }}">Settings</a> to write.
+              {% endif %}
+            </i>
           {% endif %}
         </div>
       </div>
+    </div>
+
+    <div class="user-action btn-group btn-group-justified">
+      <a href="{{ path('adstacy_app_user_ads', {username: user.username}) }}" class="btn btn-default">Ads<div><b>{{ adsCount }}</b></div></a>
+      <a href="{{ path('adstacy_app_user_promotes', {username: user.username}) }}" class="btn btn-default">Broadcast<div><b>{{ promotesCount }}</b></div></a>
+      <a href="{{ path('adstacy_app_user_followers', {username: user.username}) }}" class="btn btn-default">Followers<div><b>{{ followersCount }}</b></div></a>
+      <a href="{{ path('adstacy_app_user_followings', {username: user.username}) }}" class="btn btn-default">Followings<div><b>{{ followingsCount }}</b></div></a>
+      {% if app.user %}
+        {% if app.user != user %}
+          {% set followed = app.user.hasFollowUser(user) %}
+          <a href="{{ path('adstacy_app_user_follow', {username: user.username}) }}" class="btn btn-primary btn-follow follow-user {% if followed %}hide{% endif %}">Follow</a>
+          <a href="{{ path('adstacy_app_user_unfollow', {username: user.username}) }}" class="btn btn-success btn-follow unfollow-user {% if not followed %}hide{% endif %}">Following</a>
+        {% endif %}
+      {% else %}
+        <a href="{{ path('adstacy_app_user_follow', {username: user.username}) }}" class="btn btn-primary btn-follow">Follow</a>
+      {% endif %}
     </div>
   </div>
 {% endblock %}
@@ -91,9 +80,8 @@
     $(function() {
       $('#user-profile').ajaxlink('follow_single');
       $('.jscroll').jscroll({
-        callback: function(a, b) {
+        callback: function() {
           var $ads = $('.jscroll-added:last .advert');
-          $('.masonry').masonry('appended', $ads);
           $ads.find('img.lazy').lazyload();
           $ads.ajaxlink('ads');
         }
