--- a/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -1,5 +1,7 @@
 {% extends 'AdstacyAppBundle::layout.html.twig' %}
 
+{% form_theme form _self %}
+
 {% block stylesheets %}
   {{ parent() }}
   {% stylesheets filter='cssrewrite, uglifycss'
@@ -9,42 +11,34 @@
   {% endstylesheets %}
 {% endblock %}
 
+{% block form_row %}
+  <div class="form-group">
+    {{ form_label(form, label, {label_attr: {class: 'pull-left'} }) }}
+    <div class="form-widget">
+      {{ form_widget(form, {attr: {class: 'form-control'} }) }}
+      {{ form_errors(form, {attr: {class: 'alert alert-danger'} }) }}
+    </div>
+  </div>
+{% endblock %}
+
 {% block content %}
-  <div id="change-password" class="panel panel-default">
+  <div id="change-password" class="item panel panel-default">
     <div class="panel-heading"><h1>{{"form_password.title"|trans}}</h1></div>
     <div class="panel-body">
-      {{ form_start(form, { attr: { class: 'form-horizontal', role: 'form' } }) }}
+      {{ form_start(form, { attr: { class: '', role: 'form' } }) }}
         {{ form_errors(form) }}
-        <div class="form-group">
-          {{ form_label(form.current_password, label|default(null), { label_attr: { class: 'control-label' } }) }}
-          <div class="form-widget">
-            {{ form_widget(form.current_password, { attr: { class: 'form-control' } }) }}
-          </div>
-        </div>
+
+        {{ form_row(form.current_password) }}
+        {{ form_row(form.plainPassword.newPassword) }}
+        {{ form_row(form.plainPassword.newPasswordConfirmation) }}
 
         <div class="form-group">
-          {{ form_label(form.plainPassword.newPassword, label|default(null), { label_attr: { class: 'control-label' } }) }}
-          <div class="form-widget">
-            {{ form_widget(form.plainPassword.newPassword, { attr: { class: 'form-control' } }) }}
-          </div>
-        </div>
-
-        <div class="form-group">
-          {{ form_label(form.plainPassword.newPasswordConfirmation, label|default(null), { label_attr: { class: 'control-label' } }) }}
-          <div class="form-widget">
-            {{ form_widget(form.plainPassword.newPasswordConfirmation, { attr: { class: 'form-control' } }) }}
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label class="control-label">&nbsp;</label>
-          <div class="form-widget">
-            {{ form_widget(form.save, { attr: { class: 'form-control btn btn-primary' } }) }}
+          <div class="form-widget offset-label">
+            {{ form_widget(form.save, { attr: { class: 'btn btn-primary' } }) }}
           </div>
         </div>
 
         {{ form_rest(form) }}
-
       {{ form_end(form) }}
     </div>
   </div>
