--- a/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/Registration/register.html.twig
@@ -20,14 +20,14 @@
 {% endblock %}
 
 {% block content %}
-  <div id="register" class="panel panel-default">
+  <div id="register" class="item panel panel-default">
     <div class="panel-heading">
       <h1>{{ "form_registration.title"|trans }}</h1>
     </div>
 
     <div class="panel-body">
       {% for owner in hwi_oauth_resource_owners() %}
-      <a class="btn btn-block btn-lg btn-{{ owner }}" href="{{ hwi_oauth_login_url(owner) }}">{{"register.with"|trans}} {{ owner|trans({}, 'HWIOAuthBundle') }}</a>
+        <a class="btn btn-block btn-lg btn-{{ owner }}" href="{{ hwi_oauth_login_url(owner) }}">{{"register.with"|trans}} {{ owner|trans({}, 'HWIOAuthBundle') }}</a>
       {% endfor %}
     </div>
 
